ProdIND/ProdPrograms/force-app/main/default/objects/Total_Expense_and_investment__c/Total_Expense_and_investment__c.object-meta.xml
<CustomObject>
    <label>Total Expense and investment</label>
    <nameField>
        <label>Total Expense and investment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Total Expense and investments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>