ProdIND/ProdPrograms/force-app/main/default/objects/Total_Expense_and_investment__c/fields/Expenses_and_Investment_Type__c.field-meta.xml
<CustomField>
    <fullName>Expenses_and_Investment_Type__c</fullName>
    <label>Expenses and Investment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Expenses for higher education of son / Daughter / Family member</fullName>
            </value>
            <value>
                <fullName>Approx Medical Expenses</fullName>
            </value>
            <value>
                <fullName>Existing vehicle maintenance</fullName>
            </value>
            <value>
                <fullName>Upcoming Marriage expense (Approx) in the family in next 2 years</fullName>
            </value>
            <value>
                <fullName>Running Loan EMI Obligation(Monthly)</fullName>
            </value>
            <value>
                <fullName>Invested in LIC,</fullName>
            </value>
            <value>
                <fullName>Invested in Well digging,</fullName>
            </value>
            <value>
                <fullName>Land Development</fullName>
            </value>
            <value>
                <fullName>House construction</fullName>
            </value>
            <value>
                <fullName>Land Purchase</fullName>
            </value>
            <value>
                <fullName>Purchasing New Vehicle</fullName>
            </value>
            <value>
                <fullName>Cattle Purchase</fullName>
            </value>
            <value>
                <fullName>LAST 5 YEARS MAJOR INVESTMENT OF INCOME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>