ProdIND/ProdPrograms/force-app/main/default/objects/Total_Expense_and_investment__c/fields/Field_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Field_Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Investigation</label>
    <referenceTo>Field_Investigation__c</referenceTo>
    <relationshipLabel>Total Expense and investments</relationshipLabel>
    <relationshipName>Total_Expense_and_investments</relationshipName>
    <type>Lookup</type>
</CustomField>